# mamba-server

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: prd-tools.local.md  settings.json  settings.local.json
config/: config.example.yaml  config.yaml
internal/reports/: codebase-analysis-report.md
internal/specs/: mamba-server-PRD.md  title-generation-endpoint-PRD.md
k8s/: configmap.yaml  deployment.yaml  kustomization.yaml  pdb.yaml  secrets.yaml.example  service.yaml
src/mamba/: __init__.py  config.py  main.py
src/mamba/api/: __init__.py  deps.py  routes.py
src/mamba/api/handlers/: chat.py  health.py  models.py  title.py
src/mamba/core/: __init__.py  _agent.py  agent.py  mamba_agent.py  messages.py  streaming.py  title_utils.py  tool_schema.py  tools.py
src/mamba/middleware/: __init__.py  auth.py  logging.py  request_id.py
src/mamba/models/: __init__.py  events.py  health.py  request.py  response.py  title.py
src/mamba/utils/: __init__.py  errors.py  retry.py
tests/: __init__.py
tests/unit/: test_agent.py  test_auth.py  test_chat_handler.py  test_config.py  test_errors.py  test_health_handler.py  test_logging.py  test_main.py  test_messages.py  test_models_events.py  test_models_handler.py  test_models_health.py  test_models_request.py  test_models_title.py  test_package.py  test_request_id.py  test_retry.py  test_streaming.py  test_title_handler.py  test_title_utils.py  test_tool_schema.py  test_tools.py
tests/unit/core/: test_mamba_agent.py
